<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ef9b00"
    tools:context=".RelativeLayoutActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#f8eff8f3"
        android:hint="@string/name_hint"
        android:padding="@dimen/padding_relative"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/name"
        android:background="#f8eff8f3"
        android:hint="@string/email_hint"
        android:padding="@dimen/padding_relative"/>

    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginTop="16dp"
        android:background="#f8eff8f3"
        android:hint="@string/subject_hint"
        android:padding="@dimen/padding_relative"/>

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/subject"
        android:layout_marginTop="16dp"
        android:background="#f8eff8f3"
        android:gravity="top"
        android:hint="@string/message_hint"
        android:padding="@dimen/padding_relative"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:padding="@dimen/padding_relative"
        android:text="@string/submit_btn"/>

</RelativeLayout>